Updated heading text throughout the application

--- a/templates/dashboard/dash-staff.html
+++ b/templates/dashboard/dash-staff.html
@@ -1,3 +1,6 @@
+<h2 class="heading-text">Staff Dashboard</h2>
+<p class="secondary-text">Here you can find all the operations you can do as a staff member.</p>
+<p>Each of the cards below will bring you to their correspondent page, where you can manipulate all different records</p>
 <div class="row card-row-find">
     <div class="card row single-card">
         <div class="col s12 m3">
@@ -35,7 +38,7 @@
     </div>
     <div class="card row single-card">
         <div class="col s12 m3 l3">
-            <p class="card-title">Create new register</p>
+            <p class="card-title">Create New Account</p>
         </div>
         <div class="col s12 m5 l6">
             <div class="card-content">
