--- a/templates/dashboard/dash-user.html
+++ b/templates/dashboard/dash-user.html
@@ -1,3 +1,6 @@
+<h2 class="heading-text">User Dashboard</h2>
+<p class="secondary-text">Here you can update your information or delete your account.</p>
+<p>The delete operation is definitive. We respect your privacy and once you decide to delete your account, all your information is removed from our database.</p>
 <div class="row card-row-find">
     <div class="card row single-card">
         <div class="col s12 m3 l3">
