--- a/templates/forms/stores/feedback-store.html
+++ b/templates/forms/stores/feedback-store.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col s6 feedback-radio">
                 <label>
-                    <input class="with-gap" name="feedback-radio" value="positive" type="radio" />
+                    <input class="with-gap" name="feedback-radio" value="positive" type="radio" checked />
                     <span>Positive</span>
                 </label>
             </div>
