--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -9,7 +9,7 @@
     
     <div class="row container">
         <h2 class="heading-text">Login</h2>
-        <form method="POST" action="{{ url_for('user_login') }}" class="col s6 offset-s3">
+        <form method="POST" action="{{ url_for('user_login') }}" class="col s12 m6 offset-m3">
             <div class="row">
                 <div class="row">
                     <div class="input-field col s12">
