--- a/templates/pages/stores.html
+++ b/templates/pages/stores.html
@@ -49,7 +49,8 @@
                         <p>{{store.email}}</p>
                         {% if session['is_staff'] %}
                         <p class="card-content-title">Promotion</p>
-                        <p>Visit {{store.store_name}} page <a href={{store.aff_link}} target="_blank" rel="noopener"><strong>HERE</strong></a> </p>
+                        <!--Code left commented to show how I did but to avoid link bringing users to nonexistent pages-->
+                        <p>Visit {{store.store_name}} page <!--<a href={{store.aff_link}} target="_blank" rel="noopener"><strong>HERE</strong></a>--> HERE </p>
                         <p>Use the code <strong>{{store.discount_code}}</strong> to get <strong>{{store.discount_amount}} off</strong>!</p>
                         {% endif %}
                         <p class="card-content-title">Description</p>
