--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -1,7 +1,7 @@
 {% extends 'layout/base.html' %}
 {% block content %}
 <div class="parallax-container">
-    <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
+    <div class="parallax"><img src="/static/images/services_dog.jpg"></div>
 </div>
 <div class="section white">
     <div class="container">
