--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="parallax-container">
-    <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
+    <div class="parallax"><img src="/static/images/pup-deck.jpg"></div>
 </div>
 <div class="section white">
     <div class="container">
