--- a/templates/pages/register.html
+++ b/templates/pages/register.html
@@ -2,7 +2,7 @@
 {% extends 'layout/base.html' %}
 {% block content %}
 <div class="parallax-container">
-    <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
+    <div class="parallax"><img src="/static/images/pup-deck.jpg"></div>
 </div>
 <div class="section white">
     <div class="container">
