Moved import link from header to css file

--- a/static/css/base/_typography.scss
+++ b/static/css/base/_typography.scss
@@ -1,6 +1,7 @@
 /* Typography */
 
 @import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One|Lexend+Tera|Roboto&display=swap');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 .heading-text {
     font-family: "Alfa Slab One", sans-serif;
     font-size: 3rem;
