--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 /* Presets */
 @import url("https://fonts.googleapis.com/css?family=Alfa+Slab+One|Lexend+Tera|Roboto&display=swap");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 html {
   scroll-behavior: smooth;
 }
