--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -31,7 +31,7 @@
                 </ul>
             </div>
             <div class="col s4 logo-box">
-                <img src="./static/images/paw_logo.png" alt="Pawer Logo">
+                <img src="./static/images/paw-logo.png" alt="Pawer Logo">
                 <a class="pawer-logo-name" href="{{url_for('user_home')}}" >PAWER</a>
                 <div class="three-words">
                     <p>|ADOPTION</p>
