--- a/templates/pages/register.html
+++ b/templates/pages/register.html
@@ -6,7 +6,7 @@
 </div>
 <div class="section white">
     <div class="container">
-        {% if session['is_staff'] = 'is_staff' %}
+        {% if session['is_staff'] == 'is_staff' %}
         <h2 class="heading-text">Staff Register</h2>
         {% else %}
         <h2 class="heading-text">User Registration</h2>
@@ -88,7 +88,7 @@
     </div>
 </div>  
 <div class="parallax-container">
-    <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
+    <div class="parallax"><img src="/static/images/pup-deck.jpg"></div>
 </div>
 
 {% endblock %}
