--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="static/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/images/favicons/favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="manifest" href="static/site.webmanifest">
     <link rel="mask-icon" href="static/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
 
 	<title>PAWER</title>
