--- a/templates/pages/stores.html
+++ b/templates/pages/stores.html
@@ -16,13 +16,8 @@
                 received
                 from previous customers!</p>
             {% if not session %}
-            <p><strong>Only registered and logged in users are able to leave feedback to stores.</strong></p>
-            <div class="row dogs-callout">
-                <p>If you are registered</p>
-                <a class="offset-s4 s4 btn waves-effect secondary-text dogs-action-button" href="{{url_for('user_login')}}">login here</a>
-                <p>If you aren't registered yet</p>
-                <a class="s4 offset-s4 btn waves-effect secondary-text dogs-action-button" href="{{url_for('register')}}">register here</a>
-            </div>
+                <p><strong>Only registered and logged in users are able to leave feedback to stores.</strong></p>
+                {% include 'layout/login-register.html' %}
             {% endif %}
         </div>
         <div class="row card-row-find">
