--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -18,13 +18,25 @@
 
                     <div class="row register-box show-on-medium-and-down">
                         {% if not session['is_staff'] %}
-                            <a href="{{url_for('register')}}" class="col s12 btn waves-effect nav-action-button">Register</a>
-                            <a href="{{url_for('user_login')}}" class="col s12 btn waves-effect nav-action-button">Login</a>
+                            <a href="{{url_for('register')}}" class="col s12 btn waves-effect nav-action-button">
+                                <i class="material-icons btn-icon">person_add</i>
+                                Register
+                            </a>
+                            <a href="{{url_for('user_login')}}" class="col s12 btn waves-effect nav-action-button">
+                                <i class="material-icons btn-icon">person</i>
+                                Login
+                            </a>
                         {% endif %}
 
                         {% if session['is_staff'] %}     
-                            <a href="{{url_for('get_dashboard')}}" class="col s12 btn waves-effect nav-action-button">Dashboard</a>
-                            <a href="{{url_for('user_logout')}}" class="col s12 btn waves-effect nav-action-button">Logout</a>
+                            <a href="{{url_for('get_dashboard')}}" class="col s12 btn waves-effect nav-action-button">
+                                <i class="material-icons btn-icon">settings</i>
+                                Dashboard
+                            </a>
+                            <a href="{{url_for('user_logout')}}" class="col s12 btn waves-effect nav-action-button">
+                                <i class="material-icons btn-icon">power_settings_new</i>
+                                Logout
+                            </a>
                         {% endif %}
 
                     </div>
@@ -41,12 +53,24 @@
             </div>
             <div class="col s4 register-box hide-on-med-and-down">
             {% if not session['is_staff'] %}
-                <a href="{{url_for('register')}}" class="btn waves-effect nav-action-button">Register</a>
-                <a href="{{url_for('user_login')}}" class="btn waves-effect nav-action-button">Login</a>
+                <a href="{{url_for('register')}}" class="btn waves-effect nav-action-button">
+                    <i class="material-icons btn-icon">person_add</i>
+                    Register
+                </a>
+                <a href="{{url_for('user_login')}}" class="btn waves-effect nav-action-button">
+                    <i class="material-icons btn-icon">person</i>
+                    Login
+                </a>
             {% endif %}
             {% if session['is_staff'] %}     
-                <a href="{{url_for('get_dashboard')}}" class="btn waves-effect nav-action-button">Dashboard</a>
-                <a href="{{url_for('user_logout')}}" class="btn waves-effect nav-action-button">Logout</a>
+                <a href="{{url_for('get_dashboard')}}" class="btn waves-effect nav-action-button">
+                    <i class="material-icons btn-icon">settings</i>
+                    Dashboard
+                </a>
+                <a href="{{url_for('user_logout')}}" class="btn waves-effect nav-action-button">
+                    <i class="material-icons btn-icon">power_settings_new</i>
+                    Logout
+                </a>
             {% endif %}
             </div>
         </div>
