Moved all icons on buttons to the left

--- a/templates/forms/adoption/not-adopted.html
+++ b/templates/forms/adoption/not-adopted.html
@@ -5,7 +5,7 @@
             <p class="secondary-text center">Such a shame! Let's get this little fella back on the hunt!</p>
             <p class="center">This will permanently delete this adoption record.</p>
             <button class="btn waves-effect waves-light" type="submit">Yes, Delete
-                <i class="material-icons right">delete</i>
+                <i class="material-icons left">delete</i>
             </button>
         </div>
     </form>
