--- a/templates/forms/dogs/adopt-dog.html
+++ b/templates/forms/dogs/adopt-dog.html
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
             <button class="btn waves-effect waves-light" type="submit">Send
-                <i class="material-icons right">playlist_add</i>
+                <i class="material-icons left">playlist_add</i>
             </button>
         </div>
     </form>
