--- a/templates/forms/dogs/edit-dog.html
+++ b/templates/forms/dogs/edit-dog.html
@@ -23,7 +23,7 @@
         </div>
         <div class="row">
             <button action="" class="btn waves-effect waves-light" type="submit">Update
-                <i class="material-icons right">edit</i>
+                <i class="material-icons left">edit</i>
             </button>
         </div>
     </form>
