--- a/templates/forms/dogs/register-dog.html
+++ b/templates/forms/dogs/register-dog.html
@@ -23,7 +23,7 @@
         </div>
         <div class="row">
             <button class="btn waves-effect waves-light" type="submit">Create Account
-                <i class="material-icons right">playlist_add</i>
+                <i class="material-icons left">playlist_add</i>
             </button>
         </div>
     </form>
