--- a/templates/forms/services/edit-service.html
+++ b/templates/forms/services/edit-service.html
@@ -55,7 +55,7 @@
         </div>
         <div class="row">
             <button class="btn waves-effect waves-light" type="submit">Update
-                <i class="material-icons right">check</i>
+                <i class="material-icons left">check</i>
             </button>
         </div>
     </form>
