--- a/templates/forms/services/feedback-service.html
+++ b/templates/forms/services/feedback-service.html
@@ -19,7 +19,7 @@
         </div>
         <div class="row">
             <button class="btn waves-effect waves-light" type="submit">Leave Feedback
-                <i class="material-icons right">thumbs_up_down</i>
+                <i class="material-icons left">thumbs_up_down</i>
             </button>
         </div>
     </form>
