--- a/templates/forms/stores/feedback-store.html
+++ b/templates/forms/stores/feedback-store.html
@@ -20,7 +20,7 @@
         </div>
         <div class="row">
             <button class="btn waves-effect waves-light" type="submit">Leave feedback
-                <i class="material-icons right">thumbs_up_down</i>
+                <i class="material-icons left">thumbs_up_down</i>
             </button>
         </div>
     </form>
