--- a/templates/dashboard/dash-staff.html
+++ b/templates/dashboard/dash-staff.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col s12 m4 l3 buttons-row">
             <a href="{{url_for('get_users')}}" class="waves-effect waves-light btn card-action-button form-trigger">
-                <i class="material-icons right card-action-button-icon">edit</i>
+                <i class="material-icons left card-action-button-icon">person</i>
                 <span>Users</span>
             </a>
         </div>
@@ -31,7 +31,7 @@
         </div>
         <div class="col s12 m4 l3 buttons-row">
             <a href="{{url_for('get_adopt_requests')}}" class="waves-effect waves-light btn card-action-button form-trigger">
-                <i class="material-icons right card-action-button-icon">edit</i>
+                <i class="material-icons left card-action-button-icon">pets</i>
                 <span>Process</span>
             </a>
         </div>
@@ -48,7 +48,7 @@
         </div>
         <div class="col s12 m4 l3 buttons-row">
             <a href="{{url_for('register')}}" class="waves-effect waves-light btn card-action-button form-trigger">
-                <i class="material-icons right card-action-button-icon">edit</i>
+                <i class="material-icons left card-action-button-icon">user_add</i>
                 <span>Register</span>
             </a>
         </div>
