--- a/templates/forms/adoption/adopted.html
+++ b/templates/forms/adoption/adopted.html
@@ -5,7 +5,7 @@
             <p class="secondary-text center">Another dog found a forever home!</p>
             <p class="center">This will permanently delete the records for this dog and adoption request.</p>
             <button class="btn waves-effect waves-light" type="submit">Yes, Delete
-                <i class="material-icons right">delete</i>
+                <i class="material-icons left">delete</i>
             </button>
         </div>
     </form>
