--- a/templates/forms/stores/delete-store.html
+++ b/templates/forms/stores/delete-store.html
@@ -5,7 +5,7 @@
             <p class="secondary-text center">This will delete the store from the database.</p>
             <p class="center">Are you sure ou want to delete?</p>
             <button class="btn waves-effect waves-light" type="submit">Yes, Delete
-                <i class="material-icons right">delete</i>
+                <i class="material-icons left">delete</i>
             </button>
         </div>
     </form>
