--- a/templates/forms/users/edit-user.html
+++ b/templates/forms/users/edit-user.html
@@ -47,7 +47,7 @@
         </div>
         <div class="row">
             <button class="btn waves-effect waves-light" type="submit">Update Account
-                <i class="material-icons right">edit</i>
+                <i class="material-icons left">edit</i>
             </button>
         </div>
     </form>
