--- a/templates/pages/stores.html
+++ b/templates/pages/stores.html
@@ -56,18 +56,18 @@
                 <div class="col s12 m4 l3 buttons-row">
                     <a id="{{store._id}}" value="feedback"
                         class="waves-effect waves-light btn card-action-button form-trigger">
-                        <i class="material-icons right card-action-button-icon">thumbs_up_down</i>
+                        <i class="material-icons left card-action-button-icon">thumbs_up_down</i>
                         <span>Feedback</span>
                     </a>
                 {% if session['is_staff'] == 'is_staff' %}
                     <a id="{{store._id}}" value="edit"
                         class="waves-effect waves-light btn card-action-button form-trigger">
-                        <i class="material-icons right card-action-button-icon">edit</i>
+                        <i class="material-icons left card-action-button-icon">edit</i>
                         <span>Edit</span>
                     </a>
                     <a id="{{store._id}}" value="delete"
                         class="waves-effect waves-light btn card-action-button form-trigger">
-                        <i class="material-icons right card-action-button-icon">delete</i>
+                        <i class="material-icons left card-action-button-icon">delete</i>
                         <span>Delete</span>
                     </a>
                 {% endif %}
