--- a/static/css/style.css
+++ b/static/css/style.css
@@ -236,10 +236,11 @@ nav .button-collapse {
 /* Buttons */
 .nav-action-button {
   color: #343334;
+  font-size: 1.05rem;
   font-weight: 700;
   margin: auto;
   padding: 0;
-  width: 35%;
+  width: 40%;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -249,6 +250,11 @@ nav .button-collapse {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.nav-action-button i {
+  font-size: 1.4rem;
+  margin-right: 0.2rem;
 }
 
 .card-action-button {
