Updated classes to suit new layout with icons

--- a/templates/pages/users.html
+++ b/templates/pages/users.html
@@ -43,11 +43,11 @@
                     </div>
                     <div class="col s12 m4 l3 buttons-row">
                         <a id="{{user._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
-                            <i class="material-icons right card-action-button-icon">edit</i>
+                            <i class="material-icons left card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
                         <a id="{{user._id}}" value="delete" class="waves-effect waves-light btn card-action-button form-trigger">
-                            <i class="material-icons right card-action-button-icon">delete</i>
+                            <i class="material-icons left card-action-button-icon">delete</i>
                             <span>Delete</span>
                         </a>
                     </div>
