--- a/templates/dashboard/dash-staff.html
+++ b/templates/dashboard/dash-staff.html
@@ -48,7 +48,7 @@
         </div>
         <div class="col s12 m4 l3 buttons-row">
             <a href="{{url_for('register')}}" class="waves-effect waves-light btn card-action-button form-trigger">
-                <i class="material-icons left card-action-button-icon">user_add</i>
+                <i class="material-icons left card-action-button-icon">person_add</i>
                 <span>Register</span>
             </a>
         </div>
