Updated references to images on readme file

--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -31,7 +31,7 @@
     </div>
 </div>  
 <div class="parallax-container">
-    <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
+    <div class="parallax"><img src="/static/images/pup-deck.jpg"></div>
 </div>
 
 {% endblock %}
