Added alt to images on index and language to html tag in base

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 		
 <div class="parallax-container">
-    <div class="parallax"><img src="/static/images/pup-basket.jpeg"></div>
+    <div class="parallax"><img src="/static/images/pup-basket.jpeg" alt="Puppy in a basket"></div>
 </div>
 <div class="section white">
     <div class="row container">
@@ -24,7 +24,7 @@
     </div>
 </div>
 <div class="parallax-container">
-    <div class="parallax"><img src="/static/images/dog-training.jpg"></div>
+    <div class="parallax"><img src="/static/images/dog-training.jpg" alt="Dog running agility"></div>
 </div>
 <div class="section white">
     <div class="row container">
@@ -34,14 +34,14 @@
             saying how smart and well behaved they are!</p>
         <p>We have a great pool of certified professionals that can help you reaching your goals and even more.</p>
         <h4>Visit our PAWER Services page</h4>
-        <a href="{{url_for('get_services')}}" class="col s12 m4 offset-m4 btn waves-effect secondary-text index-action-button">
+        <a href="{{url_for('get_services')}}" class="col s12 m4 offset-m4 btn waves-effect secondary-text index-action-button" aria-label="Adoptions page">
             <i class="material-icons">supervisor_account</i>
             Services
         </a>
     </div>
 </div>
 <div class="parallax-container">
-    <div class="parallax"><img src="/static/images/pet-store.jpg"></div>
+    <div class="parallax"><img src="/static/images/pet-store.jpg" alt="Photo of a petshop"></div>
 </div>
 <div class="section white">
     <div class="row container">
@@ -49,7 +49,7 @@
         <p class="secondary-text">Looking for dog food, new toys, medicines and more? We've got your back!</p>
         <p>Go through a variety of shops that offer as many options of products as you can dare to imagine!</p>
         <h4>Visit our PAWER Stores page</h4>
-        <a href="{{url_for('get_stores')}}" class="col s12 m4 offset-m4 btn waves-effect secondary-text index-action-button">
+        <a href="{{url_for('get_stores')}}" class="col s12 m4 offset-m4 btn waves-effect secondary-text index-action-button" aria-label="Stores page">
             <i class="material-icons">shopping_cart</i>
             Stores
         </a>
