Further compressed images and converted all to jpg

--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -10,8 +10,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
-    <!-- <link rel="stylesheet" href="{{url_for('static', filename='css/style.min.css')}}" type="text/css" /> -->
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.min.css')}}" type="text/css" />
      <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="180x180" href="static/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicons/favicon-32x32.png">
