--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 		
 <div class="parallax-container">
-    <div class="parallax"><img src="/static/images/pup-basket.jpeg" alt="Puppy in a basket"></div>
+    <div class="parallax"><img src="/static/images/pup-basket.jpg" alt="Puppy in a basket"></div>
 </div>
 <div class="section white">
     <div class="row container">
