--- a/templates/pages/requests.html
+++ b/templates/pages/requests.html
@@ -2,7 +2,7 @@
 {% extends 'layout/base.html' %}
 {% block content %}
 <div class="parallax-container">
-    <div class="parallax"><img src="/static/images/adopt-image.jpeg"></div>
+    <div class="parallax"><img src="/static/images/adopt-image.jpg"></div>
 </div>
 <div class="section white">
     <div class="container">
